# alumnx-vector-db

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LOCAL_SETUP.md  README.md  config.yaml  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-dev.yml  deploy-prod.yml  pr-validation.yml
app/: config.py  main.py  models.py
app/routers/: documents.py  ingest.py  knowledgebases.py  retrieve.py
app/services/: ingestion.py  llm_parser.py  llm_query.py  retrieval_service.py
app/services/embedding/: embedder.py
app/services/store/: postgres_store.py  s3_store.py  vector_file_store.py
tests/: helpers.py  test_api.py  test_ingestion.py  test_store.py
